--- a/src/manifest.json
+++ b/src/manifest.json
@@ -16,6 +16,17 @@
   ],
   "action": {
     "default_popup": "popup.html",
-    "default_icon": "imgs/icon.ico"
+    "default_icon": {
+      "16": "imgs/icon-16.png",
+      "32": "imgs/icon-32.png",
+      "48": "imgs/icon-48.png",
+      "128": "imgs/icon-128.png"
+    }
+  },
+  "icons": {
+    "16": "imgs/icon-16.png",
+    "32": "imgs/icon-32.png",
+    "48": "imgs/icon-48.png",
+    "128": "imgs/icon-128.png"
   }
 }
